Add GRAVE implementation

--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,27 +13,31 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from src.game.board import Board\n",
     "from src.game.fight import fight\n",
-    "from src.game.contest import contest, contest_bis\n",
+    "from src.game.contest import contest, contest_bis, contest_bis_bis\n",
     "from src.common.constants import * "
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "### Playout"
+    "# Playout"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "board = Board()"
@@ -42,7 +46,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "board.playout(verbose=True)"
@@ -50,15 +56,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "### Flat MC"
+    "# Flat MC"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "board = Board()"
@@ -67,17 +77,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
-    "move = board.flat_mc()"
+    "move = board.flat_mc(n=1000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "move.render()"
@@ -85,7 +99,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### Random vs Flat MC"
    ]
@@ -93,7 +109,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "contest(\"flat_mc\", \"random_move\", nb_fights=10, nb_playouts=500)"
@@ -101,15 +119,19 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "heading_collapsed": true
+   },
    "source": [
-    "### UCB "
+    "# UCB "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "board = Board()"
@@ -118,17 +140,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
-    "move = board.ucb()"
+    "move = board.ucb(nb_playouts=1000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "move.render()"
@@ -136,7 +162,9 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### UCB vs FlatMC"
    ]
@@ -144,15 +172,19 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "contest(\"flat_mc\", \"ucb\", nb_fights=10, nb_playouts=100)"
+    "contest(\"flat_mc\", \"ucb\", nb_fights=100, nb_playouts=50) # Résultat moins cohérent que UCB_bis"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
     "### UCB_bis vs FlatMC"
    ]
@@ -160,25 +192,30 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "contest(\"flat_mc\", \"ucb_bis\", nb_fights=10, nb_playouts=100)"
+    "contest(\"flat_mc\", \"ucb_bis\", nb_fights=100, nb_playouts=50) # Résultat cohérent"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "heading_collapsed": true
    },
    "source": [
-    "### UCT"
+    "# UCT"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "board = Board()"
@@ -187,17 +224,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "%%time\n",
-    "move = board.uct_search()"
+    "move = board.uct_search(n=1000)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
     "move.render()"
@@ -205,18 +246,61 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "source": [
-    "### UCT vs FlatMC (à remplacer par UCB quand il marchera)"
+    "### UCT vs FlatMC"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hidden": true
+   },
    "outputs": [],
    "source": [
-    "contest(\"flat_mc\", \"uct_search\", nb_fights=10, nb_playouts=100)"
+    "contest(\"flat_mc\", \"uct_search\", nb_fights=100, nb_playouts=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "hidden": true
+   },
+   "source": [
+    "### UCT vs UCB_bis "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"uct_search\", \"ucb_bis\", nb_fights=100, nb_playouts=10) # Égalité"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "hidden": true
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"uct_search\", \"ucb_bis\", nb_fights=50, nb_playouts=100)  # Victoire franche de UCT\n",
+    "# A montrer dans les graphs : score du contest UCT vs UCB selon le nb de playouts autorisés"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# RAVE"
    ]
   },
   {
@@ -230,29 +314,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|██████████| 10/10 [00:07<00:00,  1.39it/s]\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'rave_search': 0.9, 'flat_mc': 0.1, 'tie': 0.0}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "contest_bis(\"rave_search\", \"flat_mc\", nb_fights=10, nb_playouts=50)"
+    "contest_bis(\"rave_search\", \"flat_mc\", nb_fights=100, nb_playouts=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RAVE vs UCB_bis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contest_bis(\"rave_search\", \"ucb_bis\", nb_fights=100, nb_playouts=10) # Victoire légère RAVE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contest_bis(\"rave_search\", \"ucb_bis\", nb_fights=50, nb_playouts=100) # Victoire franche UCB\n",
+    "# A montrer dans les graphs : score du contest RAVE vs UCB selon le nb de playouts autorisés"
    ]
   },
   {
@@ -264,29 +356,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contest_bis(\"rave_search\", \"uct_search\", nb_fights=100, nb_playouts=10) # Victoire légère RAVE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contest_bis(\"rave_search\", \"uct_search\", nb_fights=50, nb_playouts=100) # Victoire légère RAVE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# GRAVE"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### RAVE vs FLAT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contest_bis(\"grave_search\", \"flat_mc\", nb_fights=100, nb_playouts=50)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GRAVE vs UCB_bis"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contest_bis(\"grave_search\", \"ucb_bis\", nb_fights=100, nb_playouts=10) # Victoire GRAVE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contest_bis(\"grave_search\", \"ucb_bis\", nb_fights=50, nb_playouts=100) # Victoire légère UCB\n",
+    "# A montrer dans les graphs : score du contest GRAVE vs UCB selon le nb de playouts autorisés"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GRAVE vs UCT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contest_bis(\"grave_search\", \"uct_search\", nb_fights=100, nb_playouts=10) # Victoire légère UCT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "contest_bis(\"grave_search\", \"uct_search\", nb_fights=10, nb_playouts=100) # Victoire UCT"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### GRAVE vs RAVE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 10/10 [00:25<00:00,  2.56s/it]\n"
+      "100%|██████████| 25/25 [00:05<00:00,  4.89it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'rave_search': 0.7, 'uct_search': 0.3, 'tie': 0.0}"
+       "{'grave_search': 0.4, 'rave_search': 0.6, 'tie': 0.0}"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "contest_bis(\"rave_search\", \"uct_search\", nb_fights=10, nb_playouts=50)"
+    "contest_bis_bis(\"grave_search\", \"rave_search\", nb_fights=25, nb_playouts=10) # Victoire RAVE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 20%|██        | 5/25 [00:10<00:38,  1.93s/it]"
+     ]
+    }
+   ],
+   "source": [
+    "contest_bis_bis(\"grave_search\", \"rave_search\", nb_fights=25, nb_playouts=100) # Victoire "
    ]
   }
  ],
