--- a/notebooks/contests.ipynb
+++ b/notebooks/contests.ipynb
@@ -3,18 +3,22 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import sys\n",
-    "#sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")\n",
-    "sys.path.insert(0, \"/Users/alopez/Connect4\")"
+    "sys.path.insert(0, \"C:/Users/marc-/IASD/Monte Carlo/Connect4\")\n",
+    "# sys.path.insert(0, \"/Users/alopez/Connect4\")"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "from src.game.board import Board\n",
@@ -34,8 +38,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -47,6 +52,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -67,6 +73,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -78,6 +85,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -90,6 +98,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -110,6 +119,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -130,6 +140,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -141,6 +152,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -153,6 +165,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
@@ -171,33 +184,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
+    "collapsed": false,
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|████████████████████████████████████████████████████████████████████████████████| 100/100 [16:10<00:00,  9.70s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_mc': 0.53, 'tie': 0.0, 'ucb': 0.47}"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "contest(\"flat_mc\", \"ucb\", nb_fights=100, nb_playouts=50) # Résultat moins cohérent que UCB_bis"
+    "contest(\"flat_mc\", \"ucb\", nb_fights=100, nb_playouts=500) # Résultat moins cohérent que UCB_bis"
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {
-    "hidden": true
-   },
+   "metadata": {},
    "source": [
-    "### UCB_bis vs FlatMC"
+    "Juste pour nous : j'ai testé UCB et UCB_BIS 100 fights 500 playouts, ucb 0.47 et ucb_bis 0.53. J'ai supprimé ucb et laissé ucb_bis à la place"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      " 16%|████████████▉                                                                    | 32/200 [08:27<33:32, 11.98s/it]"
+     ]
+    }
+   ],
    "source": [
-    "contest(\"flat_mc\", \"ucb_bis\", nb_fights=100, nb_playouts=50) # Résultat cohérent"
+    "contest(\"flat_mc\", \"ucb\", nb_fights=200, nb_playouts=1000) # Résultat moins cohérent que UCB_bis"
    ]
   },
   {
@@ -212,8 +250,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
+    "collapsed": false,
     "hidden": true
    },
    "outputs": [],
@@ -223,11 +262,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {
+    "collapsed": false,
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Wall time: 1.86 s\n"
+     ]
+    }
+   ],
    "source": [
     "%%time\n",
     "move = board.uct_search(n=1000)"
@@ -235,11 +283,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {
+    "collapsed": false,
     "hidden": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "color : 1, column: 3.\n"
+     ]
+    }
+   ],
    "source": [
     "move.render()"
    ]
@@ -257,11 +314,12 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "hidden": true
    },
    "outputs": [],
    "source": [
-    "contest(\"flat_mc\", \"uct_search\", nb_fights=100, nb_playouts=50)"
+    "contest(\"flat_mc\", \"uct_search\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -270,30 +328,48 @@
     "hidden": true
    },
    "source": [
-    "### UCT vs UCB_bis "
+    "### UCT vs UCB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false,
+    "hidden": true
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [04:15<00:00,  5.12s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'tie': 0.0, 'ucb': 0.36, 'uct_search': 0.64}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contest(\"uct_search\", \"ucb\", nb_fights=50, nb_playouts=100) "
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "hidden": true
+    "collapsed": true
    },
    "outputs": [],
    "source": [
-    "contest(\"uct_search\", \"ucb_bis\", nb_fights=100, nb_playouts=10) # Égalité"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "hidden": true
-   },
-   "outputs": [],
-   "source": [
-    "contest(\"uct_search\", \"ucb_bis\", nb_fights=50, nb_playouts=100)  # Victoire franche de UCT\n",
-    "# A montrer dans les graphs : score du contest UCT vs UCB selon le nb de playouts autorisés"
+    "contest(\"uct_search\", \"ucb\", nb_fights=100, nb_playouts=500)  "
    ]
   },
   {
@@ -314,11 +390,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [01:40<00:00,  2.02s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_mc': 0.48, 'rave_search': 0.52, 'tie': 0.0}"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contest_bis(\"rave_search\", \"flat_mc\", nb_fights=50, nb_playouts=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [19:13<00:00, 23.08s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'flat_mc': 0.32, 'rave_search_bis': 0.68, 'tie': 0.0}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contest(\"rave_search_bis\", \"flat_mc\", nb_fights=50, nb_playouts=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "contest_bis(\"rave_search\", \"flat_mc\", nb_fights=100, nb_playouts=50)"
+    "contest(\"rave_search_bis\", \"flat_mc\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -331,7 +467,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contest_bis(\"rave_search\", \"ucb_bis\", nb_fights=100, nb_playouts=10) # Victoire légère RAVE"
@@ -340,11 +478,53 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contest_bis(\"rave_search\", \"ucb_bis\", nb_fights=50, nb_playouts=100) # Victoire franche UCB\n",
     "# A montrer dans les graphs : score du contest RAVE vs UCB selon le nb de playouts autorisés"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [13:54<00:00, 16.68s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rave_search_bis': 0.48, 'tie': 0.0, 'ucb': 0.52}"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contest(\"rave_search_bis\", \"ucb\", nb_fights=50, nb_playouts=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"rave_search_bis\", \"ucb\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -357,7 +537,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contest_bis(\"rave_search\", \"uct_search\", nb_fights=100, nb_playouts=10) # Victoire légère RAVE"
@@ -366,10 +548,52 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contest_bis(\"rave_search\", \"uct_search\", nb_fights=50, nb_playouts=100) # Victoire légère RAVE"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [15:14<00:00, 18.30s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'rave_search_bis': 0.58, 'tie': 0.0, 'uct_search': 0.42}"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contest(\"rave_search_bis\", \"uct_search\", nb_fights=50, nb_playouts=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"rave_search_bis\", \"uct_search\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -383,16 +607,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### RAVE vs FLAT"
+    "### GRAVE vs FLAT"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contest_bis(\"grave_search\", \"flat_mc\", nb_fights=100, nb_playouts=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"grave_search_bis\", \"flat_mc\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -405,7 +642,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contest_bis(\"grave_search\", \"ucb_bis\", nb_fights=100, nb_playouts=10) # Victoire GRAVE"
@@ -414,11 +653,24 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contest_bis(\"grave_search\", \"ucb_bis\", nb_fights=50, nb_playouts=100) # Victoire légère UCB\n",
     "# A montrer dans les graphs : score du contest GRAVE vs UCB selon le nb de playouts autorisés"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"grave_search_bis\", \"ucb\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -431,7 +683,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contest_bis(\"grave_search\", \"uct_search\", nb_fights=100, nb_playouts=10) # Victoire légère UCT"
@@ -440,10 +694,23 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "contest_bis(\"grave_search\", \"uct_search\", nb_fights=10, nb_playouts=100) # Victoire UCT"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"grave_search_bis\", \"uct_search\", nb_fights=100, nb_playouts=500)"
    ]
   },
   {
@@ -456,7 +723,9 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -483,7 +752,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [
     {
      "name": "stderr",
@@ -496,6 +767,55 @@
    "source": [
     "contest_bis_bis(\"grave_search\", \"rave_search\", nb_fights=25, nb_playouts=100) # Victoire "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "100%|██████████████████████████████████████████████████████████████████████████████████| 50/50 [34:34<00:00, 41.50s/it]\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'grave_search_bis': 0.54, 'rave_search_bis': 0.42, 'tie': 0.04}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "contest(\"rave_search_bis\", \"grave_search_bis\", nb_fights=50, nb_playouts=100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "contest(\"rave_search_bis\", \"grave_search_bis\", nb_fights=100, nb_playouts=500)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -514,7 +834,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.6"
+   "version": "3.6.0"
   }
  },
  "nbformat": 4,
